fixed missing width of container MQ smartphones (was just max-width) => now resizing doesn't collapse before building up again.
deleted lost of CSS garbage

--- a/css/styles.css
+++ b/css/styles.css
@@ -26,7 +26,7 @@
 html, body {
 	width: 100%;
 	height: 100%;
-	font-family: 'Open Sans', sans-serif !important;
+	font-family: 'Open Sans', sans-serif;
 	font-size: 16px;
 	line-height: 28px;
 	font-weight: 400;
@@ -64,6 +64,7 @@ header {
 
 .container {
 	max-width: 1000px;
+	width: 100%;
 	margin: 0px auto;
 }
 
@@ -98,12 +99,12 @@ header {
 
 nav  {
 	width: 40%;
-	margin-right: 16px;
+	margin-right: 2%;
 	float: right;
 }
 
 nav li {
-	font-size: 16px;
+	font-size: 1em;
 	float: right;
 	text-align: center;
 	width: 33%;
@@ -116,6 +117,7 @@ nav li a {
 	letter-spacing: 2px;
 	color: #ffffff;
 	padding: 25px 0 30px 0px;
+	border: 1px solid red;
 }
 
 .navshow{
@@ -124,7 +126,6 @@ nav li a {
 	text-transform: uppercase;
 	letter-spacing: 2px;
 	color: #435058;
-	height: 36px;
 	padding: 25px 0 30px 0px;
 }
 
@@ -180,16 +181,19 @@ opacity: 0.8;
 }
 
 .wrapper_logo {
-	width: 20%;
-	margin: 16px;
+	width: 12em;
+	margin: 1em;
 	float: left;
 }
 
+
+.logo {
+	margin: 0 auto;
+
+	}
+
 .logoWhite path {
 	fill: #ffffff;
-	width: 200px;
-	margin: 50px auto;
-	height: 30px;
 	position: relative;
 }
 
@@ -255,7 +259,7 @@ h2 .highlighted {
 
 iframe {
 	margin: 0 auto;
-	height: 500px;
+	height: 400px;
 }
  
 
@@ -283,73 +287,11 @@ iframe {
 	border: none;
 }
 
-/* OLD social Media Icons
-.socialMedia {
-	width: auto;
-	margin: 0px auto 0;
-	display: block;
-	border: 1px solid red;
-}
 
-.socialMedia a {
-	margin-right: 20px;
-}
 
-.socialMedia a img {
-	opacity: 0.6;
-}
-
-.socialMedia a img:hover {
-	opacity: 1;
-}
-
-.socialMedia a:last-child {
-	margin-right: 0px;
-}
-
-*/
-
-/* That light gray line between the sections */
-.separator {
-	width: 1000px;
-	margin: 0 auto;
-	border: 1px solid #D8D8D8;
-	clear: both;
-}
-
-/* Social Media Icons NOT USED TODO */
-
-.svg-icon {
-  width: 3em;
-  height: 3em;
-}
-
-.svg-icon path,
-.svg-icon polygon,
-.svg-icon rect {
-  fill: #469AB7;
-}
-
-.svg-icon path a:hover,
-.svg-icon polygon a:hover,
-.svg-icon rect a:hover {
-	fill: #000000;
-}
-
-.svg-icon circle {
-  stroke: #435058; 
-  stroke-width: 1;
-}
 /*************************** WORK SECTION *************************/
 
-/* This is a container for the projects */
-.portfolio {
-	margin: 50px auto;
-	width: 100%;
-	height: auto;
-	overflow: hidden;
-	background-color: #00dd00;
-}
+
 
 /* Styling for the bigger, featured project to the left */
 
@@ -378,6 +320,7 @@ iframe {
 figcaption {
 	position: relative;
 	width: 100%;
+	margin: 0px auto;
 	height: auto;
     color: #445055;
     background-color: #ffffff;
@@ -397,7 +340,6 @@ figcaption {
 
 /* This is the Read More link */
 .featured figcaption a {
-    text-align: center;
     padding: 0px;
     color: #fd6745;
     text-decoration: underline;
@@ -408,15 +350,7 @@ figcaption {
 
 
 
-.featured figure:nth-child(2),
-.featured figure:nth-child(4) {
-	margin-bottom: 0px;
-}
 
-.projects figure:nth-child(3),
-.projects figure:nth-child(4) {
-	margin-top: 20px;
-}
 
 
 /*************************** OTHER PROJECTS ***************************/
@@ -425,7 +359,7 @@ figcaption {
 
 /*************************** CONTACT SECTION *************************/
 
-/* The Email Me button */
+/* The Email Me button NOT USED*/
 
 button, .button {
 	width: auto;
@@ -459,25 +393,16 @@ button:hover {
 
 }
 
-p.antispam { display:none;}
 
-div #frmFormMailContainer{
-	width: 100%;
-	height: 700px;
-	padding: 10px;
-	margin: 0 auto;
-	overflow: hidden;
-	scroll: no;
-}
 
 /*************************** FOOTER SECTION *************************/
 
 footer {
 	width: 100%;
-	height: 200px;
+	height: 300px;
 	text-align: center;
 	background: #445055;
-	padding: 50px 0;
+	padding: 2em 1em;
 }
 
 /* The text in the footer */
@@ -496,6 +421,8 @@ footer p {
 	letter-spacing: 2px;
 	opacity: 0.5;
 }
+
+
 
 /************************** BACK TO TOP BUTTON *************************/
 
@@ -553,7 +480,7 @@ footer p {
 					devices.
 
 
-					TODO: figcaption for ipad;
+				
 
 ************************************************************************************/
 
@@ -576,7 +503,6 @@ footer p {
 
 
 	.wrapper_logo {
-	clear: both;
 	width: 100%;
 	padding: 10px 20px 0% 20px ;
 	margin: 0 auto;
@@ -585,21 +511,24 @@ footer p {
 	.logo {
 	width: 160px;
 	margin: 0 auto;
-
 	}
+
+
 
 	nav {
 	width: 100%;
 	display: inline-block;
 	margin: auto 0;
-	padding: 0 ;
+	padding: -4% ;
 	}
 
 
+
+
 	.wrapperNav {
-	min-width: 280px;
-	width: 60%;
+	max-width: 280px;
 	margin: 0 auto;
+
 	}
 
 	.navshow{
@@ -634,10 +563,6 @@ footer p {
 		width: 40%;
 	}
 
-
-	img {
-		max-width: 100%;
-	}
 
 	.intro {
 		font-size: 2em;
@@ -687,12 +612,7 @@ footer p {
 
 	/*************************** WORK SECTION *************************/
 
-	.portfolio {
-		margin-top: 50px;
-		width: 100%;
-		height: auto;
-		overflow: hidden;
-	}
+
 
 /*************************** Featured Project *************************/
 
@@ -710,26 +630,6 @@ footer p {
 
 	/*************************** FOOTER SECTION *************************/
 
-	footer {
-		width: 100%;
-		height: 400px;
-		text-align: center;
-		background: #445055;
-	}
-
-	footer p {
-		font-size: 14px;
-		padding: 35px 0;
-		margin-top: 0;
-		margin-bottom: 0;
-		color: #ffffff;
-		text-transform: uppercase;
-		letter-spacing: 2px;
-	}
-
-
-
-}
 
 /***************************************************************
 
@@ -780,7 +680,7 @@ footer p {
 	}
 
 	nav li a {
-	display: block;
+	display: inline;
 	font-family: 'Open Sans', sans-serif;
 	text-transform: uppercase;
 	letter-spacing: 2px;
@@ -893,11 +793,9 @@ footer p {
 	}
 	 
 	.featured figcaption a {
-	    text-align: center;
 	    padding: 0px;
-	    display: block;
 	    background: none;
-	    margin-top: 10px;
+
 	}
 
 	/*************************** OTHER PROJECTS ***************************/
@@ -905,24 +803,5 @@ footer p {
 
 	/*************************** FOOTER SECTION *************************/
 
-	footer {
-		width: 100%;
-		height: 100px;
-		text-align: center;
-		background: #445055;
-	}
 
-	footer p {
-		font-size: 14px;
-		padding: 35px 0;
-		margin-top: 0;
-		margin-bottom: 0;
-		color: #ffffff;
-		text-transform: uppercase;
-		letter-spacing: 2px;
-	}
-
-
-
-}
 
